--- a/en/index.html
+++ b/en/index.html
@@ -5,11 +5,11 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, maximum-scale=1">
-	<title>Главная</title>
+	<title>Home</title>
 	<meta name='description' content="" />
 	<meta name="keywords" content="" />
-	<link rel="icon" type="image/x-icon" href="favicon.ico" />
-	<link rel="stylesheet" type="text/css" href="css/style.css" />
+	<link rel="icon" type="image/x-icon" href="../favicon.ico" />
+	<link  rel="stylesheet" type="text/css" href="../css/style.css" />
 </head>
 <body  class="loaded">
 
@@ -25,26 +25,26 @@
 				<div class="top-screen">
 					<div class="top-screen__info">
 						<h1>
-							Поиск ближайшей свободной автомойки и бронирование
-							на&nbsp;удобное время. <span class="icon-arrow desct"></span>
+							Finding the nearest free car wash and booking
+							at a convenient time.<span class="icon-arrow desct"></span>
 						</h1>
 						<span class="icon icon-arrow_down mob"></span>
 						<p class="top-screen__descr">
-							Мы поможем сохранить ваше время для более интересных занятий, чем стоять в очереди.
+							We will help save your time for more interesting activities than standing in line.
 						</p>
 						<div class="top-screen__btn">
 							<a data-fancybox href="#win_1" class="button button_2">Получить доступ</a>
 						</div>
 					</div>
 					<div class="top-screen__decor">
-						<img class="desct" src="img/bg_1.png" alt="alt">
-						<img class="mob top-screen__decor-tel" src="img/bg_1-mob.png" alt="alt">
-						<img class="mob top-screen__decor-bubl" src="img/bg_1-mob-bubl.png" alt="alt">
+						<img class="desct" src="../img/bg_1.png" alt="alt">
+						<img class="mob top-screen__decor-tel" src="../img/bg_1-mob.png" alt="alt">
+						<img class="mob top-screen__decor-bubl" src="../img/bg_1-mob-bubl.png" alt="alt">
 					</div>
 				</div>
-				<div class="start">
+				<div class="start" id="start">
 					<div class="start__decor">
-						<img class="start__img" src="img/bg_2.png" alt="alt">
+						<img class="start__img" src="../img/bg_2.png" alt="alt">
 					</div>
 					<div class="start__info">
 						<h2>
@@ -82,7 +82,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="partners">
+				<div class="partners" id="partners">
 					<h3 class="partners__title">Стань нашим партнером и начни зарабатывать: </h3>
 					<p class="partners__text">Автоматизируй свой бизнес <br class="mob">вместе с нами.
 						<span class="br mob"></span>					
@@ -125,27 +125,27 @@
 						<a data-fancybox href="#win_1" class="button button_2">Стать партнером</a>
 					</div>
 				</div>
-				<div class="app">
+				<div class="app" id="app">
 					<div class="app__box">
 						<div class="app__info">
 							<h3 class="app__title">Хватит тратить свое время в очередях</h3>
 							<p class="app__text">Приложение скоро будет доступно для бета тестирования в App&nbsp;Store и Google&nbsp;Play</p>
 							<div class="app__img">
 								<a href="#" class="app__link">
-									<img src="img/ap.svg" alt="alt">
+									<img src="../img/ap.svg" alt="alt">
 								</a>
 								<a href="#" class="app__link">
-									<img src="img/gp.svg" alt="alt">
+									<img src="../img/gp.svg" alt="alt">
 								</a>
 							</div>
 						</div>
 						<div class="app__decor">
-							<img class="desct" src="img/bg_3.png" alt="alt">
-							<img class="mob" src="img/bg_3-mob.png" alt="alt">
+							<img class="desct" src="../img/bg_3.png" alt="alt">
+							<img class="mob" src="../img/bg_3-mob.png" alt="alt">
 						</div>
 					</div>
 				</div>
-				<div class="reviews">
+				<div class="reviews" id="reviews">
 					<h2 class="reviews__title">
 						Отзывы о приложении
 					</h2>
@@ -154,7 +154,7 @@
 							<p class="slider__text">Таким образом консультация с широким активом влечет за собой процесс внедрения и модернизации направлений прогрессивного развития. Разнообразный и богатый опыт сложившаяся структура организации обеспечивает широкому кругу (специалистов) участие в формировании модели развития.</p>
 							<div class="slider__human">
 								<div class="slider__human-photo">
-									<img src="img/photo1.jpg" alt="alt">
+									<img src="../img/photo1.jpg" alt="alt">
 								</div>
 								<div class="slider__human-info">
 									<div class="slider__human-name">John Doe</div>
@@ -167,7 +167,7 @@
 							"Дитям – мороженое, его бабе – цветы! Смотри не перепутай, Кутузов!"; "На чужой счёт пьют даже трезвенники… и язвенники!"; "Начинаю действовать бэз шуму и пыли по вновь утверждённому плану!";</p>
 							<div class="slider__human">
 								<div class="slider__human-photo">
-									<img src="img/photo2.jpg" alt="alt">
+									<img src="../img/photo2.jpg" alt="alt">
 								</div>
 								<div class="slider__human-info">
 									<div class="slider__human-name">Анатолий Папанов</div>
@@ -179,7 +179,7 @@
 							<p class="slider__text">Задача организации, в особенности же разбавленное изрядной долей эмпатии, рациональное мышление однозначно определяет каждого участника как способного принимать собственные решения касаемо форм воздействия. Являясь всего лишь частью общей картины, сторонники</p>
 							<div class="slider__human">
 								<div class="slider__human-photo">
-									<img src="img/photo3.jpg" alt="alt">
+									<img src="../img/photo3.jpg" alt="alt">
 								</div>
 								<div class="slider__human-info">
 									<div class="slider__human-name">Даниэль Моралес</div>
@@ -191,7 +191,7 @@
 							<p class="slider__text">Принимая во внимание показатели успешности, внедрение современных методик требует анализа распределения внутренних резервов и ресурсов. Разнообразный и богатый опыт говорит нам, что реализация намеченных плановых заданий обеспечивает широкому кругу (специалистов)</p>
 							<div class="slider__human">
 								<div class="slider__human-photo">
-									<img src="img/photo4.jpg" alt="alt">
+									<img src="../img/photo4.jpg" alt="alt">
 								</div>
 								<div class="slider__human-info">
 									<div class="slider__human-name">Джейсон Стэйтем</div>
@@ -203,7 +203,7 @@
 							<p class="slider__text">Приятно, граждане, наблюдать, как независимые государства набирают популярность среди определенных слоев населения, а значит, должны быть указаны как претенденты на роль ключевых факторов. Как принято считать, базовые сценарии поведения пользователей</p>
 							<div class="slider__human">
 								<div class="slider__human-photo">
-									<img src="img/photo5.jpg" alt="alt">
+									<img src="../img/photo5.jpg" alt="alt">
 								</div>
 								<div class="slider__human-info">
 									<div class="slider__human-name">Петр Иванович</div>
@@ -226,13 +226,13 @@
 					<span></span>
 				</a>
 				<div class="header__box">
-					<div class="logo"><img class="logo__img" src="img/logo.svg" alt="logo"></div>
+					<div class="logo"><img class="logo__img" src="../img/logo.svg" alt="logo"></div>
 					<div class="nav-mob">
 						<nav class="nav">
-							<a href="#" class="nav__link">Как использовать </a>
-							<a href="#" class="nav__link">Партнерам</a>
-							<a href="#" class="nav__link">Скачать</a>
-							<a href="#" class="nav__link">Отзывы</a>
+							<a href="#start" class="nav__link js-scroll">Как использовать </a>
+							<a href="#partners" class="nav__link js-scroll">Партнерам</a>
+							<a href="#app" class="nav__link js-scroll">Скачать</a>
+							<a href="#reviews" class="nav__link js-scroll">Отзывы</a>
 						</nav>
 						<div class="header__btn-box mob">
 							<a data-fancybox href="#win_1" class="button button_2">Стать партнером</a>
@@ -253,12 +253,12 @@
 		<footer class="footer">
 			<div class="wrapper">
 				<div class="header__box header__box_footer">
-					<div class="logo logo_footer"><img class="logo__img" src="img/logo_footer.svg" alt="logo"></div>
+					<div class="logo logo_footer"><img class="logo__img" src="../img/logo_footer.svg" alt="logo"></div>
 					<nav class="nav">
-						<a href="#" class="nav__link nav__link_footer">Как использовать </a>
-						<a href="#" class="nav__link nav__link_footer">Партнерам</a>
-						<a href="#" class="nav__link nav__link_footer">Скачать</a>
-						<a href="#" class="nav__link nav__link_footer">Отзывы</a>
+						<a href="#start" class="nav__link nav__link_footer js-scroll">Как использовать </a>
+						<a href="#partners" class="nav__link nav__link_footer js-scroll">Партнерам</a>
+						<a href="#app" class="nav__link nav__link_footer js-scroll">Скачать</a>
+						<a href="#reviews" class="nav__link nav__link_footer js-scroll">Отзывы</a>
 					</nav>
 					<a data-fancybox href="#win_1" class="button button_footer">Получить доступ</a>
 				</div>
@@ -283,7 +283,7 @@
 									<span class="icon icon-edit"></span>
 								</label>
 								<div class="box-field__input">
-									<input id="name" type="text" class="form-control" placeholder="Введите имя">
+									<input id="name" name="name" type="text" class="form-control" placeholder="Введите имя">
 								</div>
 							</div>
 							<div class="box-field">
@@ -291,7 +291,7 @@
 									<span class="icon icon-message"></span>
 								</label>
 								<div class="box-field__input">
-									<input id="email" type="email" class="form-control" placeholder="E-mail">
+									<input id="email" name="email" type="email" class="form-control" placeholder="E-mail">
 								</div>
 							</div>
 							<div class="box-field">
@@ -299,7 +299,7 @@
 									<span class="icon icon-call"></span>
 								</label>
 								<div class="box-field__input">
-									<input id="phone" type="tel" class="form-control" placeholder="Номер телефона">
+									<input id="phone"  name="phone" type="tel" class="form-control" placeholder="Номер телефона">
 								</div>
 							</div>
 							<ul class="list-check">
@@ -343,10 +343,10 @@
 
 	<!-- BODY EOF   -->
 
-	<script src="js/jquery-3.0.0.min.js"></script>			
-	<script src="js/jquery-migrate-1.4.1.min.js"></script>
-	<script src="js/components/slick.js"></script>
-	<script src="js/components/fancybox.js"></script>
-	<script src="js/custom.js" ></script>
+	<script src="../js/jquery-3.0.0.min.js"></script>			
+	<script src="../js/jquery-migrate-1.4.1.min.js"></script>
+	<script src="../js/components/slick.js"></script>
+	<script src="../js/components/fancybox.js"></script>
+	<script src="../js/custom.js" ></script>
 </body>
 </html>
